--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MHelper</title>
     <script src='https://res.wx.qq.com/open/js/jweixin-1.4.0.js'></script>
+    <script>
+      window.onload = function () {
+        if (location.hash.indexOf('recommender') > -1) {
+          localStorage.setItem('recommender', location.hash.split('recommender=')[1])
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
